--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     ],
     "require": {
         "php": "^7.1",
+        "ext-json": "*",
         "illuminate/support": "^6",
         "illuminate/contracts": "^6",
         "illuminate/database": "^6"
